bug-fixing (overflow, textOver)

--- a/css/orange.css
+++ b/css/orange.css
@@ -7570,6 +7570,7 @@ body {
     height: 100vh; } }
 
 .bg-hero {
+  overflow-x: hidden;
   background-color: #000000;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cg %3E%3Ccircle fill='#000000' cx='400' cy='400' r='600'/%3E%3Ccircle fill='#331d00' cx='400' cy='400' r='500'/%3E%3Ccircle fill='#663a00' cx='400' cy='400' r='400'/%3E%3Ccircle fill='#995700' cx='400' cy='400' r='300'/%3E%3Ccircle fill='#cc7400' cx='400' cy='400' r='200'/%3E%3Ccircle fill='#ff9100' cx='400' cy='400' r='100'/%3E%3C/g%3E%3C/svg%3E");
   /* background by SVGBackgrounds.com */
@@ -7859,6 +7860,7 @@ footer h5 {
   height: 550px;
   border-radius: 50%;
   overflow: hidden;
+  
 }
 
 .circle .left, .circle .right {
@@ -7915,11 +7917,11 @@ footer h5 {
 }
 
 .left-text {
+  pointer-events: none;
   z-index: 5000;
   position: absolute;
   display: flex;
   margin: auto;
-
   visibility: hidden;
   left: 13%;
   top: 46%;
@@ -7931,11 +7933,11 @@ footer h5 {
 }
 
 .right-text {
+  pointer-events: none;
   z-index: 5000;
   position: absolute;
   display: flex;
   margin: auto;
-
   visibility: hidden;
   left: 65%;
   top: 46%;
